Moved shopping templates out of core/ui Fixed a layout bug in the custom multiple-select interface element Added 'featured product' marker in products editor and product list Moved interfaces away from the $j() jquery to the encapsulated jquery method so $() works Added a generic CallbackRegistry JS class to handle custom interface rendering methods in modular code
git-svn-id: file:///Users/jond/svngit/svnrepos/shopp/trunk@37 846ab242-8549-0410-9a75-dfdbdae9473e

--- a/core/ui/shopp.css
+++ b/core/ui/shopp.css
@@ -47,3 +47,8 @@
 .shopp span label,
 .shopp div label { font-size: 11px; clear: both; font-weight: normal; padding-bottom: 8px; }
 
+/**
+ * Products
+ **/
+
+.shopp .original.price { text-decoration: line-through; }
